tests/language_tests/pass/0127_array_heterogeneous_slots.ee
fn main() {
    let values = [1, 2.5, true, "hello", nothing];
    println(values[0]);
    println(values[1]);
    println(values[2]);
    println(values[3]);
    println(values[4]);
}
