tests/language_tests/fail/0088_array_write_non_integer_index.ee
fn main() {
    let values = [1, 2, 3];
    values["one"] = 9;
}
